syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.libcotshrink.protobufs;

option java_package = "com.paulmandal.atak.libcotshrink.protobufs";
option java_outer_classname = "ProtobufCotEvent";

import "detail/detail.proto";

message CotEvent {
  string uid = 1;
  string type = 2;

  int32 lat = 3;
  int32 lon = 4;
  int32 ce = 5;
  int32 le = 6;

  fixed64 customBytes = 7;
  fixed64 customBytesExt = 8;

  Detail detail = 9;
}
